--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 }
 
 body {
+    min-width: 320px;
+    max-width: 800px;
+    margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(137, 43, 226, 0.725);
 }
